--- a/mvvm_mvvmbase/src/main/res/layout/activity_base.xml
+++ b/mvvm_mvvmbase/src/main/res/layout/activity_base.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:id="@+id/ll_root_view"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <ViewStub
-        android:id="@+id/view_title_bar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/title_bar_height" />
-
-    <ViewStub
-        android:id="@+id/view_content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+            android:id="@+id/view_title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/title_bar_height"/>
 
 </LinearLayout>
