--- a/app_lib_common/src/main/res/layout/status_view_network.xml
+++ b/app_lib_common/src/main/res/layout/status_view_network.xml
@@ -8,20 +8,35 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@mipmap/status_view_error" />
+        android:background="@mipmap/status_view_net" />
 
     <TextView
-        android:id="@+id/tv_error"
+        android:id="@+id/tv_net_work"
         android:layout_width="160dp"
         android:layout_height="32dp"
         android:layout_marginTop="18dp"
-        android:background="@drawable/selector_bt_bg_empty"
+        android:background="@drawable/common_selector_bt_bg_empty"
         android:gravity="center"
         android:paddingStart="8dp"
         android:paddingTop="4dp"
         android:paddingEnd="8dp"
         android:paddingBottom="4dp"
-        android:text="加载错误，点击重试"
+        android:text="设置网络"
+        android:textColor="@color/main_hint"
+        android:textSize="13sp" />
+
+    <TextView
+        android:id="@+id/tv_reload"
+        android:layout_width="160dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/common_selector_bt_bg_empty"
+        android:gravity="center"
+        android:paddingStart="8dp"
+        android:paddingTop="4dp"
+        android:paddingEnd="8dp"
+        android:paddingBottom="4dp"
+        android:text="重新加载"
         android:textColor="@color/main_hint"
         android:textSize="13sp" />
 
