--- a/app_module_found/src/main/res/layout/found_classification_list_activity.xml
+++ b/app_module_found/src/main/res/layout/found_classification_list_activity.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.aspsine.swipetoloadlayout.SwipeToLoadLayout
-    android:id="@+id/swipe_toLoad_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_bg">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include
-        android:id="@+id/swipe_refresh_header"
-        layout="@layout/module_view_refresh_header_view"/>
+    <data>
+        <variable
+                name="classificationListVM"
+                type="com.renj.found.viewmodel.ClassificationListVM"/>
+    </data>
+    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
+            android:id="@+id/swipe_toLoad_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/main_bg">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/swipe_target"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <include
+                android:id="@+id/swipe_refresh_header"
+                layout="@layout/module_view_refresh_header_view"/>
 
-    <include
-        android:id="@+id/swipe_load_more_footer"
-        layout="@layout/module_view_refresh_footer_view" />
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/swipe_target"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-</com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
+        <include
+                android:id="@+id/swipe_load_more_footer"
+                layout="@layout/module_view_refresh_footer_view"/>
+
+    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
+</layout>
