修改错误，项目运行成功

--- a/app_lib_common/src/main/res/layout/web_view_activity.xml
+++ b/app_lib_common/src/main/res/layout/web_view_activity.xml
@@ -1,57 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ProgressBar
-        android:id="@+id/progress_web_view"
-        style="@style/style_web_view_progress"/>
-
-    <WebView
-        android:id="@+id/wev_view"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    <data>
+        <variable name="webViewVM" type="com.renj.mvp.presenter.WebViewVM"/>
+    </data>
 
     <LinearLayout
-        android:id="@+id/ll_web_view_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="查看次数："
-            android:textColor="@color/main_text"
-            android:textSize="13sp" />
+        <ProgressBar
+                android:id="@+id/progress_web_view"
+                style="@style/style_web_view_progress"/>
 
-        <TextView
-            android:id="@+id/tv_watch_count"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="0"
-            android:textColor="@color/app_main"
-            android:textSize="13sp" />
+        <WebView
+                android:id="@+id/wev_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="收藏："
-            android:textColor="@color/main_text"
-            android:textSize="13sp" />
+        <LinearLayout
+                android:id="@+id/ll_web_view_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:visibility="@{webViewVM.bottomVisible}"
+                android:paddingEnd="16dp">
 
-        <ImageView
-            android:id="@+id/iv_collection"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:background="@mipmap/web_collection_n" />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="查看次数："
+                    android:textColor="@color/main_text"
+                    android:textSize="13sp"/>
+
+            <TextView
+                    android:id="@+id/tv_watch_count"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@{webViewVM.seeCount}"
+                    android:textColor="@color/app_main"
+                    android:textSize="13sp"/>
+
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="收藏："
+                    android:textColor="@color/main_text"
+                    android:textSize="13sp"/>
+
+            <ImageView
+                    android:id="@+id/iv_collection"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    android:background="@{webViewVM.collectionDrawableId}"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</layout>
