--- a/app_module_found/src/main/res/layout/found_cell_classification.xml
+++ b/app_module_found/src/main/res/layout/found_cell_classification.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:background="@drawable/common_list_selector"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/tv_classification_label"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/found_see_more"
-        android:textColor="@color/main_text"
-        android:textSize="16sp" />
+    <data>
+        <variable name="classificationRPB" type="com.renj.found.mode.bean.response.ClassificationRPB"/>
+    </data>
 
-    <ImageView
-        android:layout_width="15dp"
-        android:layout_height="20dp"
-        android:background="@mipmap/arrow_right" />
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/common_list_selector"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/tv_classification_label"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{classificationRPB.label}"
+                android:textColor="@color/main_text"
+                android:textSize="16sp"/>
+
+        <ImageView
+                android:layout_width="15dp"
+                android:layout_height="20dp"
+                android:background="@mipmap/arrow_right"/>
+
+    </LinearLayout>
+
+</layout>
