--- a/app_module_found/src/main/res/layout/found_cell_general_list.xml
+++ b/app_module_found/src/main/res/layout/found_cell_general_list.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/general_cell_tv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/common_list_selector"
-    android:padding="16dp"
-    android:textColor="#333333"
-    android:textSize="15sp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable name="itemValue" type="com.renj.found.mode.bean.data.GeneralListBean"/>
+    </data>
 
-</TextView>
+    <TextView
+            android:id="@+id/general_cell_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/common_list_selector"
+            android:padding="16dp"
+            android:text="@{itemValue.title}"
+            android:textColor="#333333"
+            android:textSize="15sp">
+
+    </TextView>
+
+</layout>
