--- a/app_module_my/src/main/res/layout/cell_see_and_collection_list.xml
+++ b/app_module_my/src/main/res/layout/cell_see_and_collection_list.xml
@@ -1,30 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/common_list_selector"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="16dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable name="seeAndCollectionDB" type="com.renj.common.mode.bean.dp.ListSeeAndCollectionDB"/>
+        <variable name="visible" type="int"/>
+    </data>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/common_list_selector"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tv_see_and_collection_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:singleLine="true"
-        android:textColor="#333333"
-        android:textSize="15sp" />
+        <TextView
+                android:id="@+id/tv_see_and_collection_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@{seeAndCollectionDB.title}"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="#333333"
+                android:textSize="15sp"/>
 
-    <TextView
-        android:id="@+id/tv_see_and_collection_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:text="查看次数：13"
-        android:textColor="@color/main_text2"
-        android:textSize="13sp" />
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:text="查看次数："
+                android:textColor="@color/main_text2"
+                android:visibility="@{visible}"
+                android:textSize="13sp"/>
 
-</LinearLayout>
+        <TextView
+                android:id="@+id/tv_see_and_collection_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:text="@{seeAndCollectionDB.seeCount}"
+                android:visibility="@{visible}"
+                android:textColor="@color/main_text2"
+                android:textSize="13sp"/>
+
+    </LinearLayout>
+
+</layout>
