MVVM 模式代码优化

--- a/app_lib_common/src/main/res/layout/web_view_activity.xml
+++ b/app_lib_common/src/main/res/layout/web_view_activity.xml
@@ -59,6 +59,7 @@
                     android:id="@+id/iv_collection"
                     android:layout_width="18dp"
                     android:layout_height="18dp"
+                    android:onClick="@{() -> webViewVM.changeCollectionStatus()}"
                     android:background="@{webViewVM.webCollectionStatus ? R.mipmap.web_collection_s : R.mipmap.web_collection_n}"/>
 
         </LinearLayout>
